# voiceai

./: .cursorrules  .dockerignore  .dockerignore.ui  .env.e2e-all-features  .env.example  .eslintcache  .firebaserc  .gcloudignore  .gitignore  .gitmodules  .mcp.json  .npmrc  .pnpmrc  .subscriptions.json  AGENTS.md  AUDIT-REPORT.md  BACKLOG.md  BRAND-IMPLEMENTATION-PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE-PRINCIPLES.md  DEPLOYMENT.md  Dockerfile  Dockerfile.joel-ui  Dockerfile.memory-service  Dockerfile.persona-service  Dockerfile.tool-service  Dockerfile.ui  Dockerfile.worker  FRONTEND-BACKEND-WIRING-AUDIT.md  IMPLEMENTATION-PLAN.md  LANDING-PAGE-AUDIT.md  ONBOARDING.md  PLAN.md  README.md  SCRIPTS.md  SEMANTIC-IMPROVEMENT-PLAN.md  STRIPE-SETUP-GUIDE.md  benchmark-v7-vs-v6.mjs  (+50 more)
.audit-reports/: health-check-2025-12-14.json
.claude/: daemon-config.json  hooks.json  plan.md
.ferni-mcp/: narration.json  state.json
.github/: RELEASE_TEMPLATE.md  (+3 more)
apps/ferni-inference/: Cargo.toml  README.md
apps/ferni-inference/src/: backends.rs  config.rs  main.rs
apps/rust-audio/: CLAUDE.md  Cargo.toml  benchmark.ts  ferni-audio.darwin-arm64.node  index.d.ts  index.js  package-lock.json  package.json
apps/rust-audio/benches/: simd_benchmarks.rs
apps/rust-audio/src/: audio_processor.rs  buffer_pool.rs  feature_extraction.rs  fft.rs  lib.rs  post_tts.rs  post_tts_processor.rs  pre_stt.rs  sola.rs  stt.rs  yin.rs
apps/rust-higgs-mlx/: Cargo.toml
apps/rust-higgs-mlx/src/: config.rs  generate.rs  main.rs  model.rs
apps/rust-higgs-pipeline/: Cargo.toml  README.md
apps/rust-higgs-pipeline/src/: audio.rs  audio_encoder.rs  audio_mel.rs  audio_mixer.rs  backchannel.rs  gpu_scheduler.rs  lib.rs  main.rs  pipeline.rs  protocol.rs  response_cache.rs  server.rs  session.rs  ws_handler.rs
apps/rust-higgs-pipeline/src/analysis/: biomarkers.rs  mod.rs
apps/rust-higgs-pipeline/src/dsp/: breath.rs  emotion.rs  filler.rs  mod.rs  pacing.rs  paralinguistic.rs  prosody.rs  texture.rs  voice_conversion.rs
apps/rust-higgs-pipeline/src/dynamics/: backchannel_model.rs  mod.rs  turn_model.rs
apps/rust-higgs-pipeline/src/llm/: candle.rs  mod.rs  ollama.rs
apps/rust-higgs-pipeline/src/stt/: mod.rs  parakeet.rs  pre_stt.rs  vad.rs  whisper.rs
apps/rust-higgs-pipeline/src/tts/: decoder.rs  fish_speech.rs  generation.rs  mod.rs  model.rs  speaker.rs
apps/rust-higgs-pipeline/tests/: candle_e2e.rs  protocol_test.rs  session_test.rs
apps/rust-higgs-tts/: Cargo.toml
apps/rust-higgs-tts/scripts/: verify_forward.py
apps/rust-higgs-tts/src/: audio.rs  config.rs  generation.rs  main.rs  model.rs
apps/rust-kyutai-bridge/: Cargo.toml  README.md
apps/rust-kyutai-bridge/src/: main.rs  protocol.rs  stt.rs  tts.rs
apps/rust-mlx-omni/: AUDIT-GAPS.md  Cargo.toml  README.md
apps/rust-mlx-omni/.test-model/: thinker_config.json
apps/rust-mlx-omni/src/: audio_encoder.rs  code2wav.rs  config.rs  conversion.rs  generate.rs  lib.rs  mel.rs  pipeline.rs  talker.rs  thinker.rs
apps/rust-omni/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
apps/rust-omni/src/: lib.rs  napi.rs
apps/rust-orpheus-tts/: Cargo.toml
apps/rust-orpheus-tts/src/: audio.rs  llm_client.rs  main.rs  snac_decoder.rs  token_parser.rs
apps/rust-perf/: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
apps/rust-perf/src/: candle_audio_encoder.rs  candle_code2wav.rs  candle_mel.rs  candle_moe.rs  candle_router.rs  candle_talker.rs  candle_thinker.rs  embedding_cache.rs  fft_analyzer.rs  fluency_analyzer.rs  full_omni_pipeline.rs  json_parser.rs  lib.rs  napi_bindings.rs  onnx_router.rs  signal_extractor.rs  ssml_processor.rs  token_counter.rs  turn_analyzer.rs  voice_biomarkers.rs
apps/rust-perf/src/humanization/: breath_injector.rs  emotion_coloring.rs  filler_injector.rs  mod.rs  physiological.rs  prosody_engine.rs
apps/rust-perf/src/lfm2/: fast_conformer.rs  lfm2_backbone.rs  mod.rs  pipeline.rs  rq_transformer.rs
apps/rust-perf/tests/: pipeline_integration.rs
apps/rust-tts/: Cargo.toml  README.md
apps/rust-tts/qwen_tts_stream/: Cargo.toml
apps/rust-tts/qwen_tts_stream/src/model/: generate.rs
apps/rust-tts/qwen_tts_stream/src/nn/: generation.rs
apps/rust-tts/src/: audio.rs  audio_processing.rs  emotion.rs  main.rs  styles.rs  voices.rs  websocket.rs
apps/sonata/: .gitignore  Cargo.toml  build.rs  package.json
apps/sonata/src/: ffi.rs  lib.rs  napi_bindings.rs  stt.rs  tts.rs
crates/ferni-tts-core/: Cargo.toml
crates/ferni-tts-core/src/: config.rs  error.rs  lib.rs
crates/ferni-tts-core/src/audio/: mod.rs  pipeline.rs
crates/ferni-tts-core/src/ssml/: parser.rs  validator.rs
crates/ferni-tts-core/src/superhuman/: backchannels.rs  breath.rs  circadian.rs  emotional.rs  energy.rs  mod.rs
crates/ferni-tts-core/src/synthesis/: client.rs  http_client.rs  mock.rs  mod.rs
ferni-speaker/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
ferni-speaker/.github/workflows/: build.yml
ferni-speaker/models/: .gitkeep
ferni-speaker/scripts/: download-models.js
ferni-speaker/src/: audio.rs  embedding.rs  lib.rs  mel.rs  similarity.rs
ferni-speaker/test/: test.js
services/ferni-tts/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
services/ferni-tts/proto/: synthesis.proto
services/ferni-tts/src/: config.rs  error.rs  lib.rs  main.rs
services/ferni-tts/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs
services/ferni-tts/src/audio/: encoding.rs  pipeline.rs  streaming.rs
services/ferni-tts/src/ssml/: mod.rs  parser.rs  types.rs
services/ferni-tts/src/superhuman/: memory_prosody.rs  mod.rs  pipeline.rs  relationship.rs  silence.rs
services/ferni-tts/src/synthesis/: cartesia.rs  cosy_voice.rs  ferni.tts.rs  mod.rs
services/kyutai-bridge/: Cargo.toml  Dockerfile  README.md
services/kyutai-bridge/src/: audio.rs  config.rs  error.rs  full_duplex.rs  main.rs  models.rs  protocol.rs  stt.rs  tts.rs
services/kyutai-bridge/tests/: integration.rs
(+29109 files in other folders)
