[package]
name = "ferni-inference"
version = "0.1.0"
edition = "2021"
description = "Unified inference gateway — routes requests to Omni, Quality, and Speed backends"
license = "MIT"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for proxying to backends)
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
