[package]
name = "higgs-mlx"
version = "0.1.0"
edition = "2021"
description = "Higgs Audio V2 TTS on Apple MLX (Rust) — DualFFN Llama with INT4 quantization"
license = "MIT"

[features]
default = ["metal", "accelerate"]
metal = ["mlx-rs/metal"]
accelerate = ["mlx-rs/accelerate"]

[[bin]]
name = "higgs-mlx-server"
path = "src/main.rs"

[dependencies]
# MLX Rust bindings (Apple Silicon, Metal GPU, unified memory)
mlx-rs = { version = "0.25", features = ["safetensors"] }

# Tokenizer
tokenizers = "0.21"

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Server
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Audio
hound = "3"
ort = "2.0.0-rc.11"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Random sampling
rand = "0.9"
