[package]
name = "higgs-voice-pipeline"
version = "0.1.0"
edition = "2021"
description = "Unified Higgs voice pipeline: Whisper STT + Higgs Audio V2 TTS + humanization DSP + voice biomarkers"

[[bin]]
name = "higgs-voice-pipeline"
path = "src/main.rs"

[dependencies]
# ML: Candle (matching rust-higgs-tts 0.8)
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.5"
half = "2.4"
tokenizers = "0.21"

# ONNX Runtime for xCodec audio decoder
ort = "2.0.0-rc.9"
ndarray = "0.16"

# Server + WebSocket
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
wide = "0.7"

# Utilities
anyhow = "1"
parking_lot = "0.12"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hf-hub = "0.4"

# Platform-specific: Metal GPU + Whisper on macOS
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"] }
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8" }
whisper-rs = "0.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
