[package]
name = "higgs-tts-server"
version = "0.1.0"
edition = "2021"
description = "Higgs Audio V2 TTS server — SOTA quality local TTS via candle + Metal"

[[bin]]
name = "higgs-tts-server"
path = "src/main.rs"

[dependencies]
# ML framework
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.5"
half = "2.4"
tokenizers = "0.21"

# ONNX Runtime for audio tokenizer decoder
ort = "2.0.0-rc.9"
ndarray = "0.16"

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hf-hub = "0.4"

# Platform-specific: Metal GPU on macOS
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
