[package]
name = "kyutai-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust/Candle WebSocket bridge for Kyutai STT + TTS (moshi-server protocol)"
license = "MIT"

[features]
default = []
# Phase 2: real Candle inference (gated so Phase 1 compiles without ML deps)
inference = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:safetensors",
    "dep:tokenizers",
]

[dependencies]
# HTTP + WebSocket server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ============================================================================
# Candle ML Framework (optional, Phase 2)
# ============================================================================

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8", optional = true }

[dependencies.candle-nn]
version = "0.8"
optional = true

[dependencies.candle-transformers]
version = "0.8"
optional = true

[dependencies.safetensors]
version = "0.5"
optional = true

[dependencies.tokenizers]
version = "0.21"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
