[package]
name = "rust-orpheus-tts"
version = "0.1.0"
edition = "2021"
description = "Orpheus TTS server — llama.cpp + SNAC decoder in Rust for low-latency local TTS"
license = "Proprietary"

[[bin]]
name = "orpheus-tts-server"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"

# ONNX Runtime for SNAC decoder
ort = "2.0.0-rc.9"

# HTTP client for llama-server (streaming)
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
