[package]
name = "ferni-perf"
version = "0.1.0"
edition = "2021"
description = "SIMD-optimized performance-critical operations for Ferni"
license = "MIT"

[features]
default = ["napi"]
# Enable NAPI bindings (cdylib). Disable with --no-default-features to run lib tests without NAPI link errors.
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
# Enable HTTP server binary for Candle Qwen3-Omni inference.
server = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:base64"]

[lib]
# cdylib for Node.js NAPI bindings, rlib for Rust tests
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "qwen3-omni-server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
# NAPI-RS for Node.js bindings (optional: omit for cargo test --no-default-features)
napi = { version = "2", features = ["napi9"], optional = true }
napi-derive = { version = "2", optional = true }

# Parallel processing
rayon = "1.10"

# Hashing for LSH
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "1.0"

# SIMD operations (runtime feature detection for cross-platform)
wide = "0.7"

# Heap-allocated ring buffer for audio processing
ringbuf = "0.4"

# Regex for pattern matching in tool scoring
regex = "1.10"

# SIMD-accelerated JSON parsing (2-5x faster than serde_json)
simd-json = "0.14"

# Serde for JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# memchr for fast byte searching
memchr = "2.7"

# Lazy static for cached patterns
lazy_static = "1.5"

# RNG for sampling in Thinker generation
rand = "0.8"

# Aho-Corasick for multi-pattern matching (O(n) for all patterns)
aho-corasick = "1.1"

# FFT for audio analysis (SIMD-accelerated)
rustfft = "6.2"

# SHA256 for embedding cache hashing
sha2 = "0.10"

# LRU cache for embedding cache
lru = "0.12"

# Generic array for FFT
num-complex = "0.4"

# ONNX Runtime for FTIS V3 inference
# coreml: On macOS, use Core ML EP (Apple GPU/Neural Engine) with CPU fallback if model uses external data
ort = { version = "2.0.0-rc.11", features = ["coreml"] }

# HuggingFace tokenizers for ONNX inference
tokenizers = { version = "0.21", features = ["onig"] }

# Ndarray for ONNX tensor operations (must match ort's ndarray version)
ndarray = "0.17"

# ============================================================================
# Candle ML Framework for ML inference
# ============================================================================
# Metal backend only on macOS (Apple Silicon GPU acceleration)
# Linux uses CPU inference as fallback

# Candle core - Metal feature only on macOS/iOS targets
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8" }

[dependencies.candle-nn]
version = "0.8"

[dependencies.candle-transformers]
version = "0.8"

[dependencies.safetensors]
version = "0.5"

[dependencies.half]
version = "2.4"

# ============================================================================
# HTTP server for Candle inference (axum + tokio)
# ============================================================================
[dependencies.axum]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.tower-http]
version = "0.6"
features = ["cors"]
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[build-dependencies]
# Updated to 2.3.1 with Rust 1.92 (optional: only when building NAPI cdylib)
napi-build = { version = "2.3.1", optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
