[package]
name = "ferni-tts-core"
version = "0.1.0"
edition = "2021"
authors = ["Ferni AI <engineering@ferni.ai>"]
description = "Core TTS synthesis engine: SSML parser, superhuman prosody, synthesis backends (no HTTP)"
license = "Proprietary"
repository = "https://github.com/ferni-ai/voiceai"

[features]
default = []
grpc = ["tonic", "prost"]

[dependencies]
tokio = { version = "1.35", features = ["full", "tracing"] }

quick-xml = { version = "0.31", features = ["serialize"] }
roxmltree = "0.19"

dasp = "0.11"
dasp_sample = "0.11"
dasp_signal = "0.11"
dasp_ring_buffer = "0.11"
rubato = "0.14"
hound = "3.5"
symphonia = { version = "0.5", features = ["pcm", "wav"] }

tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

config = "0.14"
dotenvy = "0.15"

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"

reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
