[package]
name = "ferni-tts"
version = "0.1.0"
edition = "2021"
authors = ["Ferni AI <engineering@ferni.ai>"]
description = "Superhuman TTS service with full SSML support and better-than-human prosody"
license = "Proprietary"
repository = "https://github.com/ferni-ai/voiceai"

[features]
default = ["full"]
full = ["grpc", "metrics", "tracing-subscriber"]
grpc = ["tonic", "prost"]
metrics = ["metrics", "metrics-exporter-prometheus"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# SSML parsing
quick-xml = { version = "0.31", features = ["serialize"] }
roxmltree = "0.19"

# Audio processing
dasp = "0.11"
dasp_sample = "0.11"
dasp_signal = "0.11"
dasp_ring_buffer = "0.11"
rubato = "0.14"           # High-quality resampling
hound = "3.5"             # WAV encoding
symphonia = { version = "0.5", features = ["pcm", "wav"] }

# gRPC for model backend
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Authentication
jsonwebtoken = "9.2"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"

# HTTP client (for health checks, etc.)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
wiremock = "0.5"

[build-dependencies]
tonic-build = "0.11"

[[bench]]
name = "ssml_parsing"
harness = false

[[bench]]
name = "audio_pipeline"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
