[package]
name = "kyutai-bridge"
version = "0.2.0"
edition = "2021"
description = "Production Kyutai DSM STT+TTS WebSocket server (Candle/Metal/CUDA)"
license = "MIT"
rust-version = "1.75"

[features]
default = ["candle"]
candle = []

[[bin]]
name = "kyutai-bridge"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + WebSocket
axum = { version = "0.7", features = ["ws", "macros", "json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# HuggingFace model downloading
hf-hub = { version = "0.4", features = ["tokio"] }

# Kyutai Moshi: ASR, TTS, Mimi codec, LM — all in Candle
moshi = "0.6"

# Text tokenization (SentencePiece)
sentencepiece = "0.11"

# Concurrency limiting
tower = { version = "0.5", features = ["limit"] }

# Misc
rand = "0.8"

# Candle ML framework (must match moshi's candle version: ^0.9)
# Metal backend on macOS for GPU acceleration; CPU fallback elsewhere
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
candle-transformers = { version = "0.9", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# Integration test dependencies
[dev-dependencies]
tokio-tungstenite = "0.24"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
