[package]
name = "qwen_tts"
version = "0.1.1"
edition = "2024"
description = "Vendored qwen_tts with streaming generation support"
license = "MIT OR Apache-2.0"

[lib]
name = "qwen_tts"
path = "src/lib.rs"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
cudarc = ["dep:cudarc"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
audio-loading = ["dep:symphonia", "dep:rubato", "dep:base64", "dep:reqwest"]
timing = []
integration-tests = []
test-all = ["integration-tests"]
test-all-cuda = ["test-all", "cuda", "audio-loading"]
test-all-macos = ["test-all", "metal", "audio-loading"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
float8 = "=0.5.0"
hf-hub = "0.4"
hound = "3.5"
rand_mt = "4"
rustfft = "6"
safetensors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tracing = "0.1"

# Optional dependencies
accelerate-src = { version = "0.3.2", optional = true }
base64 = { version = "0.22", optional = true }
bindgen_cuda = { version = "0.1.5", optional = true }
candle-flash-attn = { version = "0.9", optional = true }
cudarc = { version = "0.19.0", optional = true }
half = { version = "2.5.0", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
rubato = { version = "0.16", optional = true }
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"], optional = true }
